tests/error/modifier_errors/ctrl_no_arg.err
Error: Not enough arguments (at $FILE:9:16)
  | 
7 | @guppy
8 | def test() -> None:
9 |     with control():
  |                 ^^ Missing argument (expected 1, got 0)

Guppy compilation failed due to 1 previous error
